--- a/sait/style.css
+++ b/sait/style.css
@@ -1,2 +1,30 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+body{
+    background-color: #0b0c14;
+    background: linear-gradient(to right, rgba(94, 94, 201, 0.445),rgba(219, 191, 191, 0.418), rgba(109, 207, 224, 0.397));
+}
 
+.MainBlock{
+    height: 90vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    
+}
+
+.Mehanika{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.CreateButton{
+    margin-top: 10px;
+}
